--- a/src/scss/02_generic/_generic.shared.scss
+++ b/src/scss/02_generic/_generic.shared.scss
@@ -1,3 +1,14 @@
+address,
+h1, h2, h3, h4, h5, h6,
+blockquote, p, pre,
+dl, ol, ul,
+figure,
+hr,
+table,
+fieldset {
+  margin-bottom: map-get($global-spacing, spacing-normal);;
+}
+
 .lia-btn, .lia-input, .lia-select select, .lia-textarea {
     -moz-appearance: none;
     -webkit-appearance: none;
