--- a/src/scss/05_components/_components.slide.scss
+++ b/src/scss/05_components/_components.slide.scss
@@ -1,7 +1,7 @@
 .lia-slide {
   display: flex;
   flex-direction: column;
-  padding: 3rem;
+  padding: 0 3rem;
   position: relative;
   width: 100%;
 
@@ -15,12 +15,13 @@
   }
 
   &__content {
-    height: 85vh;
-    padding: 1rem 1rem 0 0;
-    position: relative;
-    overflow: auto;
-    width: 100%;
+    height: 75vh;
+    margin-top: 7.5rem;
     max-width: 1200px;
+    overflow: auto;
+    padding-right: 1rem;
+    position: relative;
+    width: 100%;
 
     @include breakpoint("l") {
       //max-width: ;
