--- a/src/scss/05_components/_components.support-menu.scss
+++ b/src/scss/05_components/_components.support-menu.scss
@@ -46,20 +46,28 @@
         border-radius: $global-radius;
         box-shadow: 0 0 1rem rgba(0,0,0,.1);
         color: $color-text;
-        display: inline-block;
+        display: none;
         max-width: 30rem;
         padding: 1rem;
         position: absolute;
         right: 0;
-        top: 5.25rem;
+        top: 4.5rem;
         z-index: 100;
+
+        &.active {
+            display: inline-block;
+        }
 
         > * {
             display: block;
+
+            &:not(:last-child) {
+                margin-bottom: 1rem;
+            }
         }
 
         svg {
-            width: 100%;
+            height: 15rem;
         }
     }
 }
