[T001TULIA-14] #CHANGE 'scope: framework' <T001TULIA-18>

--- a/src/scss/00_settings/_settings.colors.scss
+++ b/src/scss/00_settings/_settings.colors.scss
@@ -1,3 +1,22 @@
+$global-colors: (
+  "anthracite": #4b4b4b,
+  "blue-dark": #0c78ab,
+  "blue": #0f93d1,
+  "grey-dark": #323232,
+  "grey-light": #f0f0f0,
+  "grey": #aeaeae,
+  "red-dark": #b94b3c,
+  "red": #dd5746,
+  "success": #8cc96f,
+  "turquoise-dark": #2a6d6f,
+  "turquoise": #399193,
+  "turquoise-trans": rgb(57, 145, 147),
+  "warning": #f4c343,
+  "white": #ffffff,
+  "yellow-dark": #bd7d20,
+  "yellow": #e39726,
+);
+
 /* *************************
  *   MAIN COLORS
  * *************************
