--- a/src/scss/03_elements/_elements.input.scss
+++ b/src/scss/03_elements/_elements.input.scss
@@ -4,68 +4,181 @@
 }
 
 /* clears the 'X' from Internet Explorer */
-input[type=search]::-ms-clear {  display: none; width : 0; height: 0; }
-input[type=search]::-ms-reveal {  display: none; width : 0; height: 0; }
+input[type="search"]::-ms-clear {
+  display: none;
+  width: 0;
+  height: 0;
+}
+input[type="search"]::-ms-reveal {
+  display: none;
+  width: 0;
+  height: 0;
+}
 
 /* clears the 'X' from Chrome */
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration { display: none; }
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
 
-input[type="radio"],
-input[type="checkbox"] {
-  // hide the input but have it still be clickable
-  opacity: 0;
+/* --------------------------------------------------
+   Form-Check (Radiobutton & Checkbox Wrapper)
+   -------------------------------------------------- */
+
+.lia-form-check {
+  display: flex;
+  align-items: center;
+}
+
+.lia-form-check .lia-checkbox {
+  margin-right: 0.75rem;
+}
+
+/* --------------------------------------------------
+   Shared Attributes of Radiobutton & Checkbox 
+   -------------------------------------------------- */
+
+.lia-checkbox[type="checkbox"],
+.lia-radio[type="radio"] {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  -webkit-print-color-adjust: exact;
+  appearance: none;
+  background-color: #fff;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: 1px solid var(--lia-turquoise);
+  color-adjust: exact;
+  cursor: pointer;
+  height: 2.4rem;
+  position: relative;
+  transition: all 125ms ease-in-out;
   vertical-align: middle;
-  position: absolute;
-  width: calc(1em + #{$global-outline} * 2);
-  height: calc(1em + #{$global-outline} * 2);
-  margin-right: map-get($global-spacing, spacing-small);
+  width: 2.4rem;
 }
 
-input[type="radio"] + .lia-radio-btn,
-input[type="checkbox"] + .lia-check-btn {
-  margin: $global-outline;
-  clear: none;
-  vertical-align: middle;
-  border: 0.5em solid;
-  width: 1em;
-  height: 1em;
-  transition-property: background, box-shadow, border;
-  transition-duration: 0.25s;
-  transition-timing-function: ease-in;
+/* --------------------------------------------------
+   Checkbox
+   -------------------------------------------------- */
 
-  &:not([disabled]):hover {
-    cursor: pointer;
+.lia-checkbox[type="checkbox"] {
+  border-radius: $global-radius;
+
+  &:after {
+    color: white;
+    content: "\EA08";
+    font-family: "icon";
+    left: 50%;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  &:checked {
+    background-color: $color-turquoise-1;
+    &:after {
+      opacity: 1;
+    }
+  }
+
+  &.is-red {
+    background-color: var(--lia-red);
+    border-color: var(--lia-red);
+  }
+
+  &.is-blue {
+    background-color: var(--lia-blue);
+    border-color: var(--lia-blue);
+  }
+
+  &.is-yellow {
+    background-color: var(--lia-yellow);
+    border-color: var(--lia-yellow);
   }
 }
 
-input[type="radio"] {
-  & + .lia-radio-btn {
-    display: inline-block;
-    border-radius: 50%;
+/* --------------------------------------------------
+   Radiobutton
+   -------------------------------------------------- */
+
+.lia-radio[type="radio"] {
+  border-radius: 100%;
+
+  &:checked {
+    border: 0.8rem solid var(--lia-turquoise);
   }
 
-  &:checked + .lia-radio-btn {
-    border: 3px solid;
+  &.is-red {
+    border-color: var(--lia-red);
+
+    &:checked {
+      border-color: var(--lia-red);
+    }
+  }
+
+  &.is-blue {
+    border-color: var(--lia-blue);
+
+    &:checked {
+      border-color: var(--lia-blue);
+    }
+  }
+
+  &.is-yellow {
+    border-color: var(--lia-yellow);
+
+    &:checked {
+      border-color: var(--lia-yellow);
+    }
   }
 }
 
-input[type="checkbox"] {
-  & + .lia-check-btn {
-    @include material-icon("", inherit);
-    font-weight: 600;
-    overflow: hidden;
-    border-radius: map-get($global-spacing, spacing-tiny);
-  }
+/* --------------------------------------------------
+   Radiobutton Group
+   -------------------------------------------------- */
+.lia-radio-group {
+  // custom styling for submenu theme color picker
+  &.lia-settings-theme-colors {
+    margin-left: 0.4rem;
+    display: flex;
+    padding: 0.4rem 0;
 
-  &:checked + .lia-check-btn {
-    border: 0px solid;
-  }
+    .lia-radio[type="radio"] {
+      height: 1.8rem;
+      width: 1.8rem;
+      border: none;
+      background-color: var(--lia-turquoise);
 
-  &[disabled]:checked + .lia-check-btn {
-    border: 0px solid;
+      &.is-red {
+        background-color: var(--lia-red);
+      }
+
+      &.is-blue {
+        background-color: var(--lia-blue);
+      }
+
+      &.is-yellow {
+        background-color: var(--lia-yellow);
+      }
+
+      &:checked {
+        &:before {
+          content: "";
+          border-radius: 100%;
+          border: 1px solid black;
+          height: 2.4rem;
+          left: 50%;
+          position: absolute;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          width: 2.4rem;
+        }
+      }
+    }
   }
 }
 
