--- a/src/scss/05_components/_components.header.scss
+++ b/src/scss/05_components/_components.header.scss
@@ -1,10 +1,18 @@
+$header-height-desktop: 7.8rem;
+$header-height-mobile: 5.6rem;
+
 .lia-header {
   align-items: center;
   border-bottom: $global-border;
   display: flex;
   flex-direction: row;
-  padding: 1.7rem 0;
+  height: $header-height-mobile;
+  padding: 1rem 0;
   width: 100%;
+
+  @include breakpoint("md") {
+    height: $header-height-desktop;
+  }
 
   > * {
     flex: 1;
@@ -20,6 +28,7 @@
 
   &__middle {
     display: flex;
+    height: 100%;
     justify-content: center;
   }
 
@@ -30,6 +39,5 @@
 
 @mixin style-header($theme) {
   .lia-header {
-
   }
 }
