--- a/src/scss/04_objects/_object.canvas.scss
+++ b/src/scss/04_objects/_object.canvas.scss
@@ -4,14 +4,19 @@
 
 $toc-width-mobile: 100% !default;
 $toc-width-desktop: 31.5rem !default;
+
 $support-width-mobile: 100% !default;
 $support-width-desktop: 21.6rem !default;
+
+$notes-width-mobile: 100% !default;
+$notes-width-desktop: 31.5rem !default;
 
 /* --------------------------------------------------
    Canvas
    -------------------------------------------------- */
 .lia-canvas {
   display: flex;
+  flex-direction: column;
   height: 100vh;
   left: 0;
   position: relative;
@@ -37,7 +42,7 @@ $support-width-desktop: 21.6rem !default;
     &.lia-toc--visible.lia-support--visible {
       #lia-btn-toc,
       #lia-btn-support {
-        transform: translate(3rem, -50%);
+        transform: translate(-3rem, -50%);
       }
     }
   }
@@ -46,19 +51,27 @@ $support-width-desktop: 21.6rem !default;
     &.lia-toc--visible {
       left: $toc-width-desktop;
       width: calc(100% - #{$toc-width-desktop});
-    }
-  }
 
-  @include breakpoint("sm", "max") {
+      .lia-header {
+        left: #{$toc-width-desktop};
+      }
+    }
+
     &.lia-support--visible {
       right: $support-width-desktop;
       width: calc(100% - #{$support-width-desktop});
-    }
-  }
 
-  @include breakpoint("md", "max") {
+      .lia-header {
+        right: #{$support-width-desktop};
+      }
+    }
+
     &.lia-toc--visible.lia-support--visible {
       width: calc(100% - #{$toc-width-desktop} - #{$support-width-desktop});
     }
+  }
+
+  @include breakpoint("lg") {
+    flex-direction: row;
   }
 }
