[T001TULIA-14] #CHANGE 'scope: lists' <T001TULIA-22>

--- a/src/scss/04_objects/_object.canvas.scss
+++ b/src/scss/04_objects/_object.canvas.scss
@@ -73,5 +73,9 @@ $notes-width-desktop: 31.5rem !default;
 
   @include breakpoint("lg") {
     flex-direction: row;
+
+    &.lia-mode--slides .lia-header {
+      right: $notes-width-desktop;
+    }
   }
 }
