--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,7 @@
 @import "03_elements/elements.input";
 @import "03_elements/elements.label";
 @import "03_elements/elements.link";
+@import "03_elements/elements.list";
 @import "03_elements/elements.media";
 @import "03_elements/elements.page";
 @import "03_elements/elements.select";
