[T001TULIA-14] #CHANGE 'scope: buttons' <T001TULIA-18>

--- a/src/scss/03_elements/_elements.button.scss
+++ b/src/scss/03_elements/_elements.button.scss
@@ -30,6 +30,10 @@ $btn-height: 3.6rem;
     vertical-align: middle;
   }
 
+  &--icon {
+    font-family: "icon";
+  }
+
   > .lia-btn__icon {
     font-size: 1.6rem;
     line-height: inherit;
