--- a/src/scss/05_components/_components.notes.scss
+++ b/src/scss/05_components/_components.notes.scss
@@ -1,19 +1,40 @@
 .lia-notes {
   width: $notes-width-mobile;
   position: relative;
+  overflow: hidden auto;
+  display: flex;
+  flex-direction: column;
 
   &__content {
     background-color: var(--lia-grey-light);
     padding: 2.3rem;
+
+    &:nth-child(2n) {
+      padding: 0 2.3rem;
+    }
+
+    &:last-child {
+      padding-bottom: 2.3rem !important;
+    }
+
+    &.active {
+      color: var(--lia-turquoise);
+    }
+
+    > *:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__counter {
+    border-bottom: 1px solid var(--lia-grey);
+    color: var(--lia-grey);
+    display: inline-block;
+    margin-bottom: 0.5rem;
   }
 
   @include breakpoint("lg") {
     border-left: $global-border;
     max-width: $notes-width-desktop;
-
-    &__content {
-      position: absolute;
-      bottom: 0;
-    }
   }
 }
