[T001TULIA-14] #CHANGE 'scope: buttons' <T001TULIA-25>

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -60,6 +60,7 @@
 @import "06_utilities/utilities.headless";
 @import "06_utilities/utilities.hidden";
 @import "06_utilities/utilities.spacings";
+@import "06_utilities/utilities.text-align";
 
 // Themes
 @import "themes";
